# axiom-tfg

./: .dockerignore  .env.example  .gitignore  Dockerfile  ONE_PAGER.md  PITCH.md  README.md  THE_PROBLEM.md  VULTR_DEPLOY.md  WHITEPAPER.md  WHITEPAPER_V2.md  WHITEPAPER_V3.md  docker-compose.yml  pyproject.toml  stress_test_loop.py
.github/workflows/: ci.yml
axiom_cli/: __init__.py  app.py  init_cmd.py
axiom_server/: ai.py  app.py  db.py  sweep.py
axiom_server/templates/: index.html
axiom_tfg/: __init__.py  atlas.py  audit.py  cli.py  codegen.py  demo_scenario.py  evidence.py  models.py  resolve.py  robots.py  runner.py  sdk.py  utils.py  vla.py
axiom_tfg/data/: franka.urdf  kuka_iiwa14.urdf  ur10e.urdf  ur3e.urdf
axiom_tfg/gates/: __init__.py  ik_feasibility.py  keepout.py  path_keepout.py  payload.py  reachability.py
examples/: pick_place_can.yaml  pick_place_cant_keepout.yaml  pick_place_cant_payload.yaml  pick_place_cant_reach.yaml  planner_loop.py  ros2_nav2_demo.sh
ros2/: README.md
ros2/axiom_preflight_nav2/: package.xml  setup.cfg  setup.py
ros2/axiom_preflight_nav2/axiom_preflight_nav2/: preflight_proxy_node.py  taskspec_mapping.py
scripts/: present.py
tests/: test_ai.py  test_api.py  test_audit.py  test_axiom_cli.py  test_cli.py  test_codegen.py  test_demo_scenario.py  test_ik_feasibility.py  test_init.py  test_keepout.py  test_oriented_ik.py  test_path_keepout.py  test_payload.py  test_reachability.py  test_resolve.py  test_robots.py  test_sdk.py  test_taskspec_mapping.py  test_validation_levels.py  test_vla.py
