[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "axiom-tfg"
version = "0.1.0"
description = "Deterministic physical task linter — feasibility gates for robotic task specs"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Axiom Contributors"}]
dependencies = [
    "typer>=0.9,<1",
    "pydantic>=2.0,<3",
    "pyyaml>=6.0,<7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0,<9",
]

[project.scripts]
tfg = "axiom_tfg.cli:app"

[tool.setuptools.packages.find]
include = ["axiom_tfg*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
