[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "axiom-tfg"
version = "0.1.0"
description = "Deterministic physical task linter — feasibility gates for robotic task specs"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Axiom Contributors"}]
dependencies = [
    "typer>=0.9,<1",
    "pydantic>=2.0,<3",
    "pyyaml>=6.0,<7",
    "fastapi>=0.110,<1",
    "uvicorn[standard]>=0.29,<1",
    "jinja2>=3.1,<4",
    "python-multipart>=0.0.9",
    "google-generativeai>=0.7,<1",
    "openai>=1.0,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0,<9",
    "httpx>=0.27,<1",
]

[project.scripts]
tfg = "axiom_tfg.cli:app"

[tool.setuptools.packages.find]
include = ["axiom_tfg*", "axiom_server*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
